--- a/src/style.css
+++ b/src/style.css
@@ -47,13 +47,10 @@ li {
 
 main div {
     background-color: rgb(240, 240, 240, 0.9);
-
+    margin: 20px 300px;
     padding: 20px;
     border-radius: 20px;
-    display: block;
-    text-align: center;
     font-size: 20px;
-
 }
 
 small a {
